2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c: Include xvasprintf.h.
	* msginit.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-charset.c: Likewise.
	* po-xerror.c: Likewise.
	* x-csharp.c: Likewise.
	* x-glade.c: Likewise.
	* x-python.c: Likewise.
	* xgettext.c: Likewise.
	* format-boost.c: Include xvasprintf.h instead of xerror.h.
	* format-c.c: Likewise.
	* format-csharp.c: Likewise.
	* format-gcc-internal.c: Likewise.
	* format-java.c: Likewise.
	* format-lisp.c: Likewise.
	* format-perl.c: Likewise.
	* format-python.c: Likewise.
	* format-qt.c: Likewise.
	* format-scheme.c: Likewise.
	* format-ycp.c: Likewise.
	* msgexec.c: Likewise.
	* msgl-check.c: Likewise.
	* msgl-iconv.c: Likewise.
	* open-po.c: Likewise.
	* po-charset.c: Likewise.
	* po-lex.c: Likewise.
	* po-time.c: Likewise.
	* read-po-abstract.c: Likewise.
	* read-properties.c: Likewise.
	* read-stringtable.c: Likewise.
	* write-po.c: Likewise.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msginit.c (project_id, project_id_version, get_user_email): Close
	the FILE in case of I/O error.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* write-java.c (msgdomain_write_java): Don't fclose the FILE after
	fwriteerror signalled a failure.
	* write-csharp.c (msgdomain_write_csharp): Likewise.

2006-04-23  Bruno Haible  <bruno@clisp.org>

	* msgexec.c: Include <unistd.h> unconditionally.
	* msgfilter.c: Likewise.
	* msggrep.c: Likewise.
	* msginit.c: Likewise.
	* hostname.c: Likewise.
	* urlget.c: Likewise.

2006-04-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Use $(mkdir_p) instead of $(mkinstalldirs).

2006-04-09  Bruno Haible  <bruno@clisp.org>

	* write-csharp.c: Include clean-temp.h. Don't include unistd.h,
	mkdtemp.h, tmpdir.h, pathmax.h, fatal-signal.h, xallocsa.h.
	(cleanup_list): Remove variable.
	(cleanup): Remove function.
	(msgdomain_write_csharp): Simplify handling of temporary directory.
	* write-java.c: Include clean-temp.h. Don't include unistd.h,